--- a/iserir_numeros_na_lista_já_ordenandos.ipynb
+++ b/iserir_numeros_na_lista_já_ordenandos.ipynb
@@ -6,7 +6,7 @@
       "name": "iserir numeros na lista já ordenandos.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPpt33ycsIDDLPAEqO90+JD",
+      "authorship_tag": "ABX9TyOnTCGJgli7ofIiWaxlEJZC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oY2NleuYFAH5",
-        "outputId": "3688fa6b-dfec-4b9a-c08a-0764646ff806"
+        "outputId": "8baf859e-20dd-46e1-d2d2-049cec78a949"
       },
       "source": [
         "#lista para iserir as variaveis\n",
@@ -58,6 +58,7 @@
         "  #condição para o numero ser colocado na primeira ou ultima posição\n",
         "  if c == 0 or num > lista[-1]:\n",
         "    lista.append(num)\n",
+        "    print('Adicionado no final da Lista ...')\n",
         "  else:\n",
         "    #variavel para colocar o valor das posições\n",
         "    pos = 0\n",
@@ -66,22 +67,28 @@
         "      #condição para o numero compara a posição dele com a lista  \n",
         "      if num <= lista[pos]:\n",
         "        lista.insert(pos, num)\n",
+        "        print(f'Adicionado n aposição {pos} ...')\n",
         "        break\n",
         "      #variavel para armazenara a contagem\n",
         "      pos += 1\n",
         "print(f'Os Numeros digitados em ordem crescente é {lista}')"
       ],
-      "execution_count": 13,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Digite um Número 8\n",
-            "Digite um Número 1\n",
+            "Adicionado no final da Lista ...\n",
+            "Digite um Número 4\n",
+            "Adicionado n aposição 0 ...\n",
+            "Digite um Número 5\n",
+            "Adicionado n aposição 1 ...\n",
             "Digite um Número 6\n",
-            "Digite um Número 9\n",
-            "Digite um Número 2\n",
-            "Os Numeros digitados em ordem crescente é [1, 2, 6, 8, 9]\n"
+            "Adicionado n aposição 2 ...\n",
+            "Digite um Número 7\n",
+            "Adicionado n aposição 3 ...\n",
+            "Os Numeros digitados em ordem crescente é [4, 5, 6, 7, 8]\n"
           ],
           "name": "stdout"
         }
