--- a/verificar_valores_na_lista.ipynb
+++ b/verificar_valores_na_lista.ipynb
@@ -3,10 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "verificar valores na lista.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPmZs7V1B1eCOJwAZTcEoW/",
+      "authorship_tag": "ABX9TyPrfGC2BGm5BTXKuXIKp7Ms",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,51 +50,65 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x62nrQ5cnMHo",
-        "outputId": "6de6f2e2-0c7f-4e4a-8cfb-f74552d83360"
+        "outputId": "17c7b7ec-6be2-4af5-b835-e229571ec7ff"
       },
       "source": [
         "#variavel simples para armazenar a contagem\n",
         "cont = 0\n",
-        "#variavel composta para armazenar os números \n",
+        "#variavel composta para armazenar os números\n",
         "lista = []\n",
+        "print(\"-----------------------\")\n",
+        "print(\"Verificando Lista de Números\")\n",
+        "print(\"-----------------------\")\n",
         "#laço para acrentar o valor na lista\n",
         "while True:\n",
-        "  valor = int(input('Digite um Número: '))\n",
-        "  lista.append(valor)\n",
-        "  cont += 1\n",
-        "  opcao = str(input('Quer Continuar? (S/N) ')).strip().upper()[0]\n",
-        "  if opcao == \"N\":\n",
+        "   valor = int(input('Digite um Número: '))\n",
+        "   lista.append(valor)\n",
+        "   cont += 1\n",
+        "   opcao = str(input('Quer Continuar? (S/N) ')).strip().upper()[0]\n",
+        "   if opcao == \"N\":\n",
         "    break\n",
-        "  else:\n",
+        "   else:\n",
         "    #condição para verificar se o valor está na lista\n",
         "    if 5 in lista:\n",
         "      cinco = 'o valor 5 está na lista '\n",
         "    else:\n",
         "      cinco = 'o valor 5 não faz parte da lista'\n",
-        "#metodo para inverter  a lista \n",
+        "print(\"-----------------------\")\n",
+        "print(\"------Resultado--------\")\n",
+        "#metodo para inverter  a lista\n",
         "lista.sort(reverse=True)\n",
         "print(f'A lista em ordem decrescente é {lista}')\n",
         "print(f'Foram Digitados {cont} números')\n",
-        "print(f'{cinco}')\n"
+        "print(f'{cinco}')\n",
+        "print(\"-----------------------\")"
       ],
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Digite um Número: 9\n",
+            "-----------------------\n",
+            "Verificando Lista de Números\n",
+            "-----------------------\n",
+            "Digite um Número: 56\n",
             "Quer Continuar? (S/N) s\n",
-            "Digite um Número: 6\n",
+            "Digite um Número: 45\n",
             "Quer Continuar? (S/N) s\n",
-            "Digite um Número: 7\n",
+            "Digite um Número: 5\n",
             "Quer Continuar? (S/N) s\n",
-            "Digite um Número: 8\n",
+            "Digite um Número: 89\n",
+            "Quer Continuar? (S/N) s\n",
+            "Digite um Número: 74\n",
             "Quer Continuar? (S/N) n\n",
-            "A lista em ordem decrescente é [9, 8, 7, 6]\n",
-            "Foram Digitados 4 números\n",
-            "5 não está na lista\n"
-          ],
-          "name": "stdout"
+            "-----------------------\n",
+            "------Resultado--------\n",
+            "A lista em ordem decrescente é [89, 74, 56, 45, 5]\n",
+            "Foram Digitados 5 números\n",
+            "o valor 5 está na lista \n",
+            "-----------------------\n"
+          ]
         }
       ]
     },
@@ -105,9 +117,7 @@
       "metadata": {
         "id": "NB2DLkwznP37"
       },
-      "source": [
-        ""
-      ]
+      "source": []
     }
   ]
 }
